Bug 674775 - Implement js::IndexToString to get a JSString corresponding to a uint32_t.  r=luke